--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai-files": "^1.4.0",
+    "mocha": "^6.1.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --diff"
   },
   "repository": {
     "type": "git",
