--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "naminejs.js",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "chai-files": "^1.4.0",
