Added php filter in html search, changed README

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
-    "prettify-xml": "^1.2.0",
-    "uniqid": "^5.0.3"
+    "prettify-xml": "^1.2.0"
   },
   "devDependencies": {
     "chai-files": "^1.4.0",
